// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`atx.md 1`] = `
# h1

## h2
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# h1

## h2

`;

exports[`long-heading.md 1`] = `
# this is a long long long long long long long long long long long long long long heading.
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# this is a long long long long long long long long long long long long long long heading.

`;

exports[`mixed.md 1`] = `
## LaraCart - Laravel Shopping Cart Package (<a href="http://laracart.lukepolo.com/">http://laracart.lukepolo.com</a>)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## LaraCart - Laravel Shopping Cart Package (<a href="http://laracart.lukepolo.com/">http://laracart.lukepolo.com</a>)

`;

exports[`setext.md 1`] = `
h1
===

h2
---
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# h1

## h2

`;

exports[`unbreakable.md 1`] = `
### \`reporters\` [array<moduleName | [moduleName, options]>]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
### \`reporters\` [array<moduleName | [moduleName, options]>]

`;
